fix recaptcha not align with facebook chat plugin

--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -214,6 +214,7 @@
 
   // override recaptcha position
   .grecaptcha-badge {
+    bottom: 24px !important;
     z-index: 9;
   }
 }
